/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.atomic.value.v1;

option java_package = "io.atomix.api.runtime.atomic.value.v1";
option java_outer_classname = "AtomicValueV1";
option java_multiple_files = true;

import "atomix/runtime/v1/primitive.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

// AtomicValue is a service for a value primitive
service AtomicValue {
    // Create creates the value
    rpc Create (CreateRequest) returns (CreateResponse);

    // Close closes the value
    rpc Close (CloseRequest) returns (CloseResponse);

    // Set sets the value
    rpc Set (SetRequest) returns (SetResponse);

    // Insert inserts the value
    rpc Insert (InsertRequest) returns (InsertResponse);

    // Update updates the value
    rpc Update (UpdateRequest) returns (UpdateResponse);

    // Get gets the value
    rpc Get (GetRequest) returns (GetResponse);

    // Delete deletes the value
    rpc Delete (DeleteRequest) returns (DeleteResponse);

    // Watch watches the value
    rpc Watch (WatchRequest) returns (stream WatchResponse);

    // Events watches for value change events
    rpc Events (EventsRequest) returns (stream EventsResponse);
}

message CreateRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    map<string, string> tags = 2;
}

message CreateResponse {

}

message CloseRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message CloseResponse {

}

message GetRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message GetResponse {
    Value value = 1;
}

message SetRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message SetResponse {
    uint64 version = 1;
    Value prev_value = 2;
}

message InsertRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message InsertResponse {
    uint64 version = 1;
}

message UpdateRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    bytes value = 2;
    uint64 prev_version = 3;
    google.protobuf.Duration ttl = 4 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message UpdateResponse {
    uint64 version = 1;
    Value prev_value = 2 [
        (gogoproto.nullable) = false
    ];
}

message DeleteRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    uint64 prev_version = 2;
}

message DeleteResponse {
    Value value = 1;
}

message WatchRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message WatchResponse {
    Value value = 1;
}

message EventsRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message EventsResponse {
    Event event = 1 [
        (gogoproto.nullable) = false
    ];
}

message Value {
    bytes value = 1;
    uint64 version = 2;
}

message Event {
    oneof event {
        Created created = 1;
        Updated updated = 2;
        Deleted deleted = 3;
    }

    message Created {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
    }

    message Updated {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
        Value prev_value = 2 [
            (gogoproto.nullable) = false
        ];
    }

    message Deleted {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
        bool expired = 2;
    }
}
